--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   },
   "dependencies": {
     "@next/font": "13.1.1",
+    "@react-icons/all-files": "^4.1.0",
     "firebase": "^9.15.0",
-    "icons": "^1.0.0",
     "next": "13.1.1",
     "react": "^18.2.0",
     "react-dom": "18.2.0",
